--- a/WarehouseAPI/src/main/resources/templates/customer/index.html
+++ b/WarehouseAPI/src/main/resources/templates/customer/index.html
@@ -241,6 +241,7 @@
                             contentType: "application/json",
                             data: JSON.stringify(customer),
                             success: function (res) {
+                                console.log(res);
                                 if (res === 200) {
                                     Swal.fire(
                                             'Good job!',
@@ -248,12 +249,13 @@
                                             'success'
                                             ).then(function () {
                                         window.location.reload();
+                                        $('#exampleModal').modal('hide');
                                     });
                                 }
                             }
                         });
                         console.log(customer);
-                        $('#exampleModal').modal('hide');
+                        
                     });
                     $('#btnEdit').click(function () {
                         const customer = {
