--- a/WarehouseAPI/src/main/resources/templates/layout/layout.html
+++ b/WarehouseAPI/src/main/resources/templates/layout/layout.html
@@ -60,6 +60,11 @@
 
 
                 <hr class="sidebar-divider my-0">
+                 <li class="nav-item nav-issue">
+                    <a class="nav-link nav-issue" th:href="@{/Issue}">
+                        <i class="fa-solid fa-money-bill"></i>
+                        <span>Issue Order</span></a>
+                </li>
                 <li class="nav-item nav-sale">
                     <a class="nav-link nav-sale" th:href="@{/sale/browse}">
                         <i class="fa-solid fa-money-bill"></i>
