--- a/WarehouseAPI/src/main/resources/templates/user/index2.html
+++ b/WarehouseAPI/src/main/resources/templates/user/index2.html
@@ -16,7 +16,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <!-- Page Heading -->
             <h1 class="h3 mb-2 text-gray-800">User Lists</h1>
 
-
+            <h5 th:if="${message}" class="alert alert-success" th:text="${message}"></h5>
             <!-- DataTales Example -->
             <div class="card shadow mb-4">
                 <div class="card-header py-3">
