--- a/BackupMobile/app/src/main/res/layout/activity_view.xml
+++ b/BackupMobile/app/src/main/res/layout/activity_view.xml
@@ -5,94 +5,122 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ViewActivity">
-
-    <ImageButton
-        android:id="@+id/goodsImage"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="80dp"
-        android:scaleType="fitCenter"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/goods" />
-
-    <ImageButton
-        android:id="@+id/imgAllocate"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="80dp"
-        android:scaleType="fitCenter"
+    <LinearLayout
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="1dp"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/goodsImage"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/order" />
-
-    <ImageButton
-        android:id="@+id/imageButton3"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="67dp"
-        android:scaleType="fitCenter"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/goodsImage"
-        app:srcCompat="@drawable/movement" />
+        app:layout_constraintTop_toTopOf="parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_marginBottom="20dp">
+        <RelativeLayout
+            android:id="@+id/rltGoods"
+            android:layout_width="175dp"
+            android:layout_height="wrap_content" >
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/goodsImage"
+                android:layout_width="match_parent"
+                android:layout_height="54dp"
+                android:layout_centerHorizontal="true"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/goods" />
 
-    <ImageButton
-        android:id="@+id/imgIssue"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="67dp"
-        android:layout_marginEnd="80dp"
-        android:scaleType="fitCenter"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageButton3"
-        app:layout_constraintTop_toBottomOf="@+id/imgAllocate"
-        app:srcCompat="@drawable/issue" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/goodsImage"
+                android:layout_centerInParent="true"
+                android:singleLine="true"
+                android:text="Goods Information"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/rltAllocate"
+            android:layout_width="175dp"
+            android:layout_height="wrap_content" >
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/imgAllocate"
+                android:layout_width="match_parent"
+                android:layout_height="54dp"
+                android:layout_centerHorizontal="true"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/order" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="19dp"
-        android:text="Movement Report"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />
+            <TextView
+                android:id="@+id/tvAllocate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imgAllocate"
+                android:layout_centerInParent="true"
+                android:singleLine="true"
+                android:text="Allocate Report"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_marginBottom="20dp">
+        <RelativeLayout
+            android:id="@+id/rltMovement"
+            android:layout_width="175dp"
+            android:layout_height="wrap_content" >
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/moveImg"
+                android:layout_width="match_parent"
+                android:layout_height="54dp"
+                android:layout_centerHorizontal="true"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/movement" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="16dp"
-        android:text="Goods Information"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/goodsImage" />
+            <TextView
+                android:id="@+id/tvMovement"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/moveImg"
+                android:layout_centerInParent="true"
+                android:singleLine="true"
+                android:text="Movement Report"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/rltIssue"
+            android:layout_width="175dp"
+            android:layout_height="wrap_content" >
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/imgIssue"
+                android:layout_width="match_parent"
+                android:layout_height="54dp"
+                android:layout_centerHorizontal="true"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/order" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="76dp"
-        android:text="Allocate Report"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgAllocate" />
+            <TextView
+                android:id="@+id/tvIssue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imgIssue"
+                android:layout_centerInParent="true"
+                android:singleLine="true"
+                android:text="Issue Order"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="16dp"
-        android:text="Issue Order"
-        app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton4" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnLogout"
@@ -108,7 +136,7 @@
         android:id="@+id/txtUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="20dp"
         android:text="Welcome"
         app:layout_constraintEnd_toStartOf="@+id/btnLogout"
