--- a/WarehouseAPI/src/main/resources/templates/layout/layout.html
+++ b/WarehouseAPI/src/main/resources/templates/layout/layout.html
@@ -317,7 +317,8 @@
                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <span class="mr-2 d-none d-lg-inline text-gray-600 small">
                                         <div sec:authorize="isAuthenticated()">
-                                            Welcome <span sec:authentication="name"></span></div></span>
+                                            Welcome <span sec:authentication="name"></span></span>
+                                        </div></span>
                                     <img class="img-profile rounded-circle"
                                          th:src="@{/img/undraw_profile.svg}">
                                 </a>
@@ -325,21 +326,18 @@
                                 <!-- Dropdown - User Information -->
                                 <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                      aria-labelledby="userDropdown">
-                                    <a class="dropdown-item" href="#">
+                                    
+                                    <a class="dropdown-item" th:href="@{/user/profile/}">
                                         <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                         Profile
                                     </a>
-                                    <div sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_MANAGER')">
+                                    <!--sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_MANAGER')"-->
+                                    <div >
                                         <a class="dropdown-item" href="#">
                                             <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                            Settings
+                                            Work Space
                                         </a>
                                     </div>
-
-                                    <a class="dropdown-item" href="#">
-                                        <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                                        Activity Log
-                                    </a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                                         <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
