--- a/WarehouseAPI/src/main/resources/templates/user/profile.html
+++ b/WarehouseAPI/src/main/resources/templates/user/profile.html
@@ -6,7 +6,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 <html xlmns:th="http://www.thymeleaf.org" xlmns:layout="http://www.ultrag.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/layout}">
     <head>
-        <title>Update User</title>
+        <title>Profile</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -14,9 +14,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <div class="container-fluid" layout:fragment="contents">
 
             <!-- Page Heading -->
-            <h1 class="h3 mb-2 text-gray-800">Update User</h1>
-
-            <form  th:action="@{/user/save2}" method="post" th:object="${user}">
+            <h1 class="h3 mb-2 text-gray-800">User Profile</h1>
+            <h5 th:if="${message}" class="alert alert-success" th:text="${message}"></h5>
+            <form th:action="@{/user/save-profile}" method="post" th:object="${user}" 
+                  oninput='confirm_password.setCustomValidity(confirm_password.value != password.value ? "Passwords do not match." : "")'>
                 <input type="hidden" th:field="*{id}">
                 <div class="form-group">
                     <label>Username</label>
@@ -31,14 +32,22 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <input type="password" class="form-control" th:field="*{password}"  placeholder="Leave blank if you dont want to change" >
                 </div>
                 <div class="form-group">
-                    <label>Active</label>
-                    <input type="checkbox" th:field="*{active}" >
+                    <label>Confirm Password</label>
+                    <input type="password"  class="form-control" id="confirm_password" name="confirm_password"  placeholder="Confirm Password" onkeyup='check()'>
+                    <span id="missmatch"></span>
                 </div>
-                
+                <div class="form-group">
+                    <label>Assigned Roles:</label>
+                    <div th:each="role: ${user.roles}">
+                        <span th:text="'['+${role.name}+']'"></span>
+                    </div>
+                </div>
                 <button type="submit" class="btn btn-primary">Update</button>
             </form>
             </div>
-        
+        <script>
+            
+        </script>
             <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
             <script th:src="@{/vendor/datatables/jquery.dataTables.min.js}"></script>
             <script th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}"></script>
