--- a/WarehouseAPI/src/main/resources/templates/sale/detail.html
+++ b/WarehouseAPI/src/main/resources/templates/sale/detail.html
@@ -6,18 +6,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 <html xlmns:th="http://www.thymeleaf.org" xlmns:layout="http://www.ultrag.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/layout}">
     <head>
-        <title>Incoming</title>
+        <title>Sale Order</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="container-fluid" layout:fragment="contents">
-
             <!-- Page Heading -->
-
-
-
-
             <div class="card shadow mb-4">
                 <div class="card-header py-3">
                     <h3 class="card-title">Sale Order details</h3>
@@ -69,6 +64,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <table class="table table-bordered" id="tblWh" width="100%" cellspacing="0">
                                 <thead>
                                     <tr>
+                                        <th></th>
                                         <th>Image</th>
                                         <th>Name</th>
                                         <th>Quantity</th>
@@ -78,6 +74,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                 </thead>
                                 <tbody>
                                     <tr th:each="item: ${details}">
+                                        <td><a th:href="@{/sale/pick-list/{no}(no=${item.good_data.goods_no})}" class="btn btn-outline-primary">Pick List</a></td>
                                         <td><img th:src="@{${item.good_data.photosImagePath}}" width="50px" /></td>
                                         <td th:text="${item.good_data.goods_name}">1</td>
                                         <td th:text="${item.quantity}">1</td>
