--- a/WarehouseAPI/src/main/resources/templates/customer/index.html
+++ b/WarehouseAPI/src/main/resources/templates/customer/index.html
@@ -19,6 +19,28 @@
                         <i class="fa-solid fa-plus"></i> Add New Customer
                     </button>
                 </div>
+                <div class="card-header py-3">
+                    <form th:action="@{/api/customers/import}" method="post" enctype="multipart/form-data">
+<!--                        <input type="file" th:name="file" />
+
+                        <button  class="btn btn-primary" id="btnShow">
+                            <input th:type="submit" value="Import" />
+                        </button>-->
+                        <div class="mb-3">
+                            <div class="col-4 mb-2">
+                                <label for="formFile" class="form-label"><strong>Upload by Excel</strong></label>
+                                <input class="form-control" type="file" id="formFile" th:name="file">
+                            </div>
+                            <br>
+                            <div class="col-4">
+                                <button class="btn btn-primary" type="submit">Upload</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="card-header py-3">
+                    <a th:href="@{/api/customers/export}">Export to Excel</a>
+                </div>
                 <div class="card-body">
                     <div class="table-responsive">
                         <table class="table table-bordered" id="tblWh" width="100%" cellspacing="0">
