Update Sale Order

--- a/WarehouseAPI/src/main/resources/templates/issue/detail.html
+++ b/WarehouseAPI/src/main/resources/templates/issue/detail.html
@@ -33,7 +33,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 
                         <dt class="col-sm-3">Goods Name</dt>
                         <dd class="col-sm-9" th:text="${issue.goods_name}">
-
+                         <dt class="col-sm-3">Sale Order No</dt>
+                        <dd class="col-sm-9" th:text="${issue.so_id}">        
                         </dd>
 
                         <dt class="col-sm-3">Location</dt>
