--- a/WarehouseAPI/src/main/resources/templates/layout/layout.html
+++ b/WarehouseAPI/src/main/resources/templates/layout/layout.html
@@ -119,7 +119,7 @@
                 </li>
                 
                 <li class="nav-item nav-supplier">
-                    <a class="nav-link nav-customer" th:href="@{/transaction}">
+                    <a class="nav-link nav-trans" th:href="@{/transaction}">
                         <i class="fa-solid fa-truck-moving"></i>
                         <span>Transaction</span></a>
                 </li>
